# 001-fastapi-backend

./: .gitignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  render.yaml  requirements.txt
alembic/: env.py
alembic/versions/: 8dd1ffcc54a1_initial_migration.py
src/app/: main.py
src/app/core/: config.py  logging_config.py
src/app/crud/: __init__.py  todo.py
src/app/db/: base_class.py  init_db.py  session.py
src/app/exceptions/: handlers.py
src/app/models/: __init__.py  todo.py
src/app/routers/: todos.py
src/app/schemas/: __init__.py  todo.py
tests/: test_todos.py
